test: enhance exit cause handling tests