@@ -37,184 +37,97 @@ class ComputeExitCauseServiceTests {
         computeExitCauseService = new ComputeExitCauseService();
     }
 
-    //region getPreComputeExitCauseAndPrune
+    //region setAndGetPreComputeExitCauseAndPrune
     @Test
-    void setAndGetPreComputeExitCauseAndPrune() {
-        ReplicateStatusCause cause =
-                ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING;
+    void setAndGetPreComputeExitCauses() {
+        // Test single cause
+        ReplicateStatusCause singleCause = ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING;
         Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE,
-                CHAIN_TASK_ID,
-                List.of(cause))).isTrue();
+                CHAIN_TASK_ID, List.of(singleCause))).isTrue();
         Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID))
-                .isEqualTo(List.of(cause));
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE,
-                CHAIN_TASK_ID)).isEqualTo(List.of(ReplicateStatusCause.PRE_COMPUTE_FAILED_UNKNOWN_ISSUE));
-    }
+                .isEqualTo(List.of(singleCause));
 
-    @Test
-    void shouldReturnUnknownIssueWhenPreComputeExitCauseNotSet() {
-        List<ReplicateStatusCause> cause = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID);
-        Assertions.assertThat(cause)
-                .isNotNull()
-                .isEqualTo(List.of(ReplicateStatusCause.PRE_COMPUTE_FAILED_UNKNOWN_ISSUE));
-    }
-    //endregion
-
-    //region getPostComputeExitCauseAndPrune
-    @Test
-    void setAndGetPostComputeExitCauseAndPrune() {
-        ReplicateStatusCause cause =
-                ReplicateStatusCause.POST_COMPUTE_COMPUTED_FILE_NOT_FOUND;
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST,
-                CHAIN_TASK_ID,
-                List.of(cause))).isTrue();
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID))
-                .isEqualTo(List.of(cause));
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST,
-                CHAIN_TASK_ID)).isEqualTo(List.of(ReplicateStatusCause.POST_COMPUTE_FAILED_UNKNOWN_ISSUE));
-    }
-
-    @Test
-    void shouldReturnUnknownIssueWhenPostComputeExitCauseNotSet() {
-        List<ReplicateStatusCause> cause = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID);
-        Assertions.assertThat(cause)
-                .isNotNull()
-                .isEqualTo(List.of(ReplicateStatusCause.POST_COMPUTE_FAILED_UNKNOWN_ISSUE));
-    }
-    //endregion
-
-    @Test
-    void shouldAccumulateExitCausesWhenCalledMultipleTimes() {
-        ReplicateStatusCause cause =
-                ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING;
-        computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST,
-                CHAIN_TASK_ID,
-                List.of(cause));
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST,
-                CHAIN_TASK_ID,
-                List.of(cause))).isTrue();
-
-        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID);
-        Assertions.assertThat(retrieved)
-                .hasSize(2)
-                .containsExactly(cause, cause);
-    }
-
-    //region bulk exit causes tests
-    @Test
-    void shouldSetAndGetBulkPreComputeExitCauses() {
-        List<ReplicateStatusCause> causes = Arrays.asList(
+        // Test multiple causes in single call
+        List<ReplicateStatusCause> multipleCauses = Arrays.asList(
                 ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING,
                 ReplicateStatusCause.PRE_COMPUTE_INVALID_DATASET_CHECKSUM
         );
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE,
+                CHAIN_TASK_ID, multipleCauses)).isTrue();
+        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID))
+                .containsExactlyElementsOf(multipleCauses);
 
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, causes))
-                .isTrue();
-
-        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID);
-        Assertions.assertThat(retrieved)
-                .isNotNull()
-                .hasSize(2)
-                .containsExactlyElementsOf(causes);
+        // After pruning, should return default unknown issue
+        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE,
+                CHAIN_TASK_ID)).isEqualTo(List.of(ReplicateStatusCause.PRE_COMPUTE_FAILED_UNKNOWN_ISSUE));
     }
+    //endregion
 
+    //region setAndGetPostComputeExitCauseAndPrune
     @Test
-    void shouldSetAndGetBulkPostComputeExitCauses() {
-        List<ReplicateStatusCause> causes = Arrays.asList(
+    void setAndGetPostComputeExitCauses() {
+        // Test single cause
+        ReplicateStatusCause singleCause = ReplicateStatusCause.POST_COMPUTE_COMPUTED_FILE_NOT_FOUND;
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST,
+                CHAIN_TASK_ID, List.of(singleCause))).isTrue();
+        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID))
+                .isEqualTo(List.of(singleCause));
+
+        // Test multiple causes in single call
+        List<ReplicateStatusCause> multipleCauses = Arrays.asList(
                 ReplicateStatusCause.POST_COMPUTE_COMPUTED_FILE_NOT_FOUND,
                 ReplicateStatusCause.POST_COMPUTE_TIMEOUT
         );
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST,
+                CHAIN_TASK_ID, multipleCauses)).isTrue();
+        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID))
+                .containsExactlyElementsOf(multipleCauses);
 
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID, causes))
-                .isTrue();
-
-        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID);
-        Assertions.assertThat(retrieved)
-                .isNotNull()
-                .hasSize(2)
-                .containsExactlyElementsOf(causes);
+        // After pruning, should return default unknown issue
+        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST,
+                CHAIN_TASK_ID)).isEqualTo(List.of(ReplicateStatusCause.POST_COMPUTE_FAILED_UNKNOWN_ISSUE));
     }
+    //endregion
 
+    //region Accumulation
     @Test
-    void shouldAccumulateBulkExitCausesWhenCalledMultipleTimes() {
+    void shouldAccumulateExitCausesWhenCalledMultipleTimes() {
+        // Test accumulation with same cause
+        ReplicateStatusCause duplicateCause = ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING;
+        computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, List.of(duplicateCause));
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE,
+                CHAIN_TASK_ID, List.of(duplicateCause))).isTrue();
+
+        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID);
+        Assertions.assertThat(retrieved)
+                .hasSize(2)
+                .containsExactly(duplicateCause, duplicateCause);
+
+        // Test accumulation with different causes
         List<ReplicateStatusCause> firstBatch = Collections.singletonList(
                 ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING);
         List<ReplicateStatusCause> secondBatch = Collections.singletonList(
                 ReplicateStatusCause.PRE_COMPUTE_INVALID_DATASET_CHECKSUM);
 
-        // First call should succeed
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, firstBatch))
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID, firstBatch))
+                .isTrue();
+        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID, secondBatch))
                 .isTrue();
 
-        // Second call should also succeed and accumulate causes
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, secondBatch))
-                .isTrue();
-
-        // Retrieved causes should contain both batches
-        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID);
-        Assertions.assertThat(retrieved)
-                .isNotNull()
+        List<ReplicateStatusCause> accumulatedCauses = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID);
+        Assertions.assertThat(accumulatedCauses)
                 .hasSize(2)
                 .contains(ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING)
                 .contains(ReplicateStatusCause.PRE_COMPUTE_INVALID_DATASET_CHECKSUM);
     }
 
     @Test
-    void shouldAllowDuplicateExitCausesFromDifferentDatasets() {
-        List<ReplicateStatusCause> firstBatch = Collections.singletonList(
-                ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING);
-        List<ReplicateStatusCause> secondBatch = Collections.singletonList(
-                ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING); // Same error for different dataset
-
-        // Both calls should succeed
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, firstBatch))
-                .isTrue();
-        Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, secondBatch))
-                .isTrue();
-
-        // Retrieved causes should contain both instances of the same error
-        List<ReplicateStatusCause> retrieved = computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID);
-        Assertions.assertThat(retrieved)
-                .isNotNull()
-                .hasSize(2)
-                .containsOnly(ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING);
-    }
-
-    @Test
-    void shouldNotSetBulkExitCausesWhenNull() {
+    void shouldNotSetExitCausesWhenNullOrEmpty() {
         Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, null))
                 .isFalse();
-    }
 
-    @Test
-    void shouldNotSetBulkExitCausesWhenEmpty() {
         Assertions.assertThat(computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, Collections.emptyList()))
                 .isFalse();
-    }
-
-    @Test
-    void shouldReturnDefaultUnknownIssueWhenBulkExitCausesNotSet() {
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID))
-                .isEqualTo(List.of(ReplicateStatusCause.PRE_COMPUTE_FAILED_UNKNOWN_ISSUE));
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.POST, CHAIN_TASK_ID))
-                .isEqualTo(List.of(ReplicateStatusCause.POST_COMPUTE_FAILED_UNKNOWN_ISSUE));
-    }
-
-    @Test
-    void shouldPruneBulkExitCausesAfterRetrieval() {
-        List<ReplicateStatusCause> causes = Collections.singletonList(
-                ReplicateStatusCause.PRE_COMPUTE_DATASET_URL_MISSING);
-
-        computeExitCauseService.setExitCausesForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID, causes);
-
-        // First retrieval should return causes
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID))
-                .isNotNull()
-                .containsExactlyElementsOf(causes);
-
-        // Second retrieval should return default unknown issue (pruned, so no specific causes set)
-        Assertions.assertThat(computeExitCauseService.getExitCausesAndPruneForGivenComputeStage(ComputeStage.PRE, CHAIN_TASK_ID))
-                .isEqualTo(List.of(ReplicateStatusCause.PRE_COMPUTE_FAILED_UNKNOWN_ISSUE));
     }
     //endregion
 
